Spelling and grammar check of none code files

--- a/internal/handlers/descriptors/adapter_models.yaml
+++ b/internal/handlers/descriptors/adapter_models.yaml
@@ -7,11 +7,11 @@ get:
   group: admin-essentials
 
   description: |
-    Display one or more available adapter models
+    Display one or more available adapter models.
 
     The `get adapter-models` command will return the list of adapter models that
     are available on the server.
 
   example: |
     # Display list of adapter models
-    4 ipctl get adapter-models
+    $ ipctl get adapter-models
