--- a/internal/handlers/descriptors/workflows.yaml
+++ b/internal/handlers/descriptors/workflows.yaml
@@ -6,26 +6,26 @@ get:
   use: workflows
   group: automation-studio
   description: |
-    Display one or more workflows
+    Display one or more workflows.
 
 describe:
   use: workflow <name>
   group: automation-studio
   description: |
-    Display details about a workflow
+    Display details about a workflow.
 
 create:
   use: workflow <name>
   group: automation-studio
   description: |
-    Create a new workflow
+    Create a new workflow.
 
 delete:
   use: workflow <name>
   group: automation-studio
 
   description: |
-    Delete a workflow
+    Delete a workflow.
 
     The `delete workflow` command will delete an existing workflow from the
     Itential Platform server.  If the specified workflow does not exist,
@@ -36,26 +36,28 @@ copy:
   group: automation-studio
 
   description: |
-    Copy a workflow from one server to another
+    Copy a workflow from one server to another.
 
-    The `copy workflow` command will direclty copy a workflow asset from one
+    The `copy workflow` command will directly copy a workflow asset from one
     server to another.  This command requires three values to work, the `name`
-    argument, the `--from` argument and the `--to` argument.
+    argument, the `--from` argument, and the `--to` argument.
 
     The required `name` argument specifies the name of the workflow to copy.  The
-    `--from` argument accepts the name of a configured profile and defines the
+    `--from` argument accepts the name of a configured ipctl profile and defines the
     server to copy the workflow from.  The `--to` argument accepts the name of a
-    configured profile and defines the server to copy the workflow to.
+    configured ipctl profile and defines the server to copy the workflow to.
 
     If the workflow specified by `name` does not exist on the source server, this
     command will return an error.  Conversely, if the workflow specified by name
-    exists on the target server, this command will return an error.
+    exists on the target server, this command will return an error. In other words,
+    you can not copy a workflow that does not exist on the source server nor can
+    you overwrite an existing workflow on the target server.
 
     If either the `--from` or `--to` profile names do not exist in your
-    configureation file, this command will return an error.
+    configuration file, this command will return an error.
 
-    When copying a workflow asset from the source to target, any dependent assets
-    required by the workflow are not copied over.
+    When copying a workflow asset from the source to the target, any dependent
+    assets required by the workflow are not copied over.
 
 
   example: |
@@ -67,18 +69,18 @@ clear:
   use: workflows
   group: automation-studio
   description: |
-    Delete all configured workflows
+    Delete all configured workflows.
 
 import:
   use: workflow <path>
   group: automation-studio
 
   description: |
-    Import a workflow
+    Import a workflow.
 
     The `import workflow` command will attempt to import a workflow from the
     specified path.  The required path argument should point to the JSON file
-    containing the worklow
+    containing the workflow.
 
     The workflow can be directly imported from a Git repository.  To import the
     workflow from a Git repository, use the `--repository` command line option.
@@ -94,22 +96,22 @@ import:
     $ ipctl import workflow path/to/test.workflow.json
 
     # Import a workflow from a repository
-    $ ipctl import workflow test.workflow.json --repository git@github.com:itential/worfklows.git
+    $ ipctl import workflow test.workflow.json --repository git@github.com:itential/workflows.git
 
 export:
   use: workflow <name>
   group: automation-studio
   description: |
-    Export a workflow
+    Export a workflow.
 
 load:
   use: workflows <path>
   group: automation-studio
   description: |
-    Load workflows
+    Load workflows.
 
 dump:
   use: workflows
   group: automation-studio
   description: |
-    Dump all workflows
+    Dump all workflows.
