Add support for loading templates
Add command support for loading templates to the application.  The
command will load all templates from a repository or filesystem.  The
`load templates ...` command can load templates that have been exported
or it can load templaes in native format (jinj2, textfsm).

--- a/internal/handlers/descriptors/templates.yaml
+++ b/internal/handlers/descriptors/templates.yaml
@@ -74,3 +74,15 @@ import:
   group: automation-studio
   description: |
     Import a template
+
+load:
+  use: templates <path>
+  group: automation-studio
+  description: |
+    Load templates
+
+dump:
+  use: templates
+  group: automation-studio
+  description: |
+    Dump all templates
