fix: update Homebrew configuration for goreleaser v2 compatibility
- Change 'folder' field to 'directory' for brews configuration
- Resolves goreleaser v2.13.3 unmarshal error

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -65,7 +65,7 @@ brews:
       owner: itential
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-    folder: Formula
+    directory: Formula
     homepage: https://github.com/itential/ipctl
     description: "A powerful command-line interface for managing Itential Platform servers"
     license: Proprietary
