--- a/.github/workflows/premerge.yaml
+++ b/.github/workflows/premerge.yaml
@@ -22,7 +22,7 @@ jobs:
           go-version: stable
 
       - name: Install go-licenses
-        run: go install github.com/google/go-licenses@latest
+        run: go install github.com/google/go-licenses/v2@latest
 
       - name: Run make test
         run: make test
